Popper position fixes, Mobile Size Menu Alignment Fixes, clip-path removed

--- a/src/App.css
+++ b/src/App.css
@@ -1,57 +1,34 @@
-/* .custom-menu-item{
-  display: flex;
-  flex-flow: column wrap;
-} */
-
-/* .custom-menu-list{
-  display: flex;
-  justify-content: space-around;
-  background-color: antiquewhite;
-} */
-
 .navbar-logo {
-  width: 300px; /* Adjust the width to your preference */
-  height: auto /* Automatically adjust the height while maintaining the aspect ratio */
+  width: 300px;
+  height: auto
 }
 
-a {
-  color: aliceblue;
-}
-
-a:hover {
-  color: red;
-  background-color: #fa9076;
+.nav-link:hover {
+  color: #fa9076;
 }
 
 .custom-blue {
   background-color: #001489;
 }
 
-.custom-blue-icon {
-  color: #001489;
-}
-
 .custom-serach-social-links {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-rows: 50% 50%;
+  place-items: center;
 
 }
 
 .custom-social-links {
   display: flex;
-  /* width: 400;
-  height: 100; */
-  /* clip-path: path("M 10 10 C 10 60, 10 100, 130 90 C 175 80 220 65 280 85 C 350 100 385 100 390 10 L 10 10 Z"); */
-  clip-path: path("M 3 2 C 3 15, 3 24, 39 22 C 53 19 66 16 84 21 C 106 24 116 24 118 2 L 3 2 Z");
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 .custom-circle-search {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* border: 2px solid black; */
   border-radius: 50%;
   width: 2em;
   height: 2em;
@@ -59,63 +36,54 @@ a:hover {
 }
 
 .custom-circle-search i {
-  font-size: 1em; /* Adjust the icon size as needed */
-  color: white; /* Icon color */
-}
-
-/* nav .navbar-nav li{
-  color: white !important;
-}
-
-.vr {
+  font-size: 1em;
   color: white;
-} */
+}
 
-/* .custom-product-item-grid{
-  display: grid;
-  grid-auto-columns: auto;
-  grid-auto-rows: auto;
-} */
 
 .custom-tooltip {
-  background:white ;
+  background: white;
   color: black;
   border-radius: 10px;
   padding: 10px;
-  /* text-align: left; */
-  /* position: relative; */
-  font-size: 0.8rem;
   max-width: 100vw;
+  margin-left: 5vw;
+  margin-top: 0.5vw;
   visibility: hidden;
 
   &[data-show="true"] {
     visibility: visible;
   }
 
-  &[to-red="true"] {
-    background: tomato;
-    color: white;
+  .custom-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    width: 90vw;
   }
 
-  .custom-product-item-grid{
-    display: grid;
-    grid-template-columns: auto auto auto;
-    /* grid-auto-rows: auto auto auto; */
-    gap: auto;
+  .custom-grid img {
+    width: 100%;
+    /* Make the image width 100% of the parent container */
+    height: 70%;
+    /* Maintain the aspect ratio */
+    max-height: 200px;
+    /* Set a maximum height to avoid very tall images */
+    object-fit: scale-down;
+    /* Preserve aspect ratio and cover the entire container */
   }
 
   .arrow,
   .arrow::before {
     position: absolute;
-    width: 8px;
-    height: 8px;
+    width: 25px;
+    height: 25px;
     background: inherit;
     transition: top 0.3s ease-in, bottom 0.3s ease-in, left 0.3s ease-in,
       right 0.3s ease-in;
-  }
-
-  .arrow {
     visibility: hidden;
+    background-color: white;
+    margin-left: -2.5vw;
   }
 
   .arrow::before {
@@ -124,27 +92,53 @@ a:hover {
     transform: rotate(45deg);
   }
 
-  &[data-popper-placement^="top"] > .arrow {
-    bottom: -4px;
-  }
-
-  &[data-popper-placement^="bottom"] > .arrow {
-    top: -4px;
-  }
-
-  &[data-popper-placement^="left"] > .arrow {
-    right: -4px;
-  }
-
-  &[data-popper-placement^="right"] > .arrow {
-    left: -4px;
+  &[data-popper-placement^="bottom"]>.arrow {
+    top: -12px;
   }
 
   .arrow[data-hide="true"]::before {
     visibility: hidden !important;
   }
 
-  &[data-show] > .arrow::before {
+  &[data-show]>.arrow::before {
     visibility: visible;
+  }
+}
+
+@media (max-width: 768px) {
+  .navbar-nav .nav-item {
+    text-align: left;
+    /* Align individual nav-items to the left */
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+    display: flex;
+  }
+
+  .nav-link {
+    display: inline-flex;
+    justify-content: flex-start;
+    margin-right: auto;
+
+    h4 {
+      padding-left: 15px;
+    }
+  }
+
+  .custom-social-links {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+  }
+
+  .custom-circle-search {
+    display: ;
+  }
+
+  .custom-tooltip {
+    visibility: hidden !important;
+  }
+
+  .custom-tooltip .arrow {
+    visibility: hidden !important;
   }
 }
